argocd/vault/httpRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  # annotations:
  #   gethomepage.dev/enabled: "true"
  #   gethomepage.dev/name: MySpeed
  #   gethomepage.dev/icon: myspeed
  #   gethomepage.dev/description: "MySpeed is a speed test analysis software that records your internet speed for up to 30 days."
  #   gethomepage.dev/pod-selector: app=myspeed
  labels:
    app.kubernetes.io/instance: vault-app
  name: vault-http-route
spec:
  parentRefs:
    - name: cilium-private-gateway
      namespace: cilium
      sectionName: https
  hostnames:
  - vault.yanello.net
  rules:
  - backendRefs:
    - name: vault-ui
      port: 8200
